# nginx-manager

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROJECT_HANDOFF.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
api/: __init__.py  config.py  main.py
api/core/: acme_service.py  auth_dependency.py  auth_service.py  cert_helpers.py  cert_manager.py  cert_scheduler.py  context_helpers.py  database.py  docker_service.py  encryption_service.py  event_store.py  gpt_schema.py  health_checker.py  rate_limiter.py  request_logger.py  session_service.py  snapshot_service.py  totp_service.py  transaction_context.py  transaction_manager.py  user_service.py  workflow_definitions.py  workflow_engine.py
api/core/config_generator/: __init__.py  generator.py
api/core/config_manager/: __init__.py  adapter.py  crossplane_parser.py  parser.py
api/dashboard/: __init__.py  context.py  dependencies.py  router.py
api/dashboard/templates/: base.html
api/endpoints/: auth.py  certificates.py  events.py  gpt.py  nginx.py  sessions.py  sites.py  totp.py  transactions.py  users.py  workflows.py
api/gpt/: example_config.json  instructions.md
api/mcp_server/: __init__.py  prompts.py  resources.py  run.sh  server.py  tools.py
api/models/: __init__.py  auth.py  certificate.py  config.py  event.py  nginx.py  site_requests.py  transaction.py  workflow.py
docker/api/: Dockerfile
docker/compose/: dev.yml  prod.yml
docker/nginx/: Dockerfile  nginx.conf
docs/: AGENT_WORKFLOWS.md  API.md  ARCHITECTURE.md  AUTH_ANALYSIS.md  CONTRIBUTING.md  GPT_INTEGRATION.md  MCP_DEPLOYMENT.md  MCP_DESIGN.md  ROADMAP.md
scripts/: dev-deploy.sh  prod-deploy.sh
test-configs/: api.example.com.conf  example.com.conf
tests/: conftest.py
tests/fixtures/nginx_configs/: circular_include_a.conf  circular_include_b.conf  complex_locations.conf  geo_directive.conf  included_locations.conf  load_balancer.conf  main_with_includes.conf  (+4 more)
tests/unit/: test_2fa_login_flow.py  test_agent_conversations.py  test_api_contracts.py  test_auth_dependency.py  test_auth_service.py  test_cert_context_helpers.py  test_cert_manager.py  test_certificate_models.py  test_config_generator.py  test_context_helpers.py  test_crossplane_parser.py  test_dashboard.py  test_dashboard_monitoring.py  test_dashboard_operations.py  test_dry_run.py  test_encryption_service.py  test_error_recovery.py  test_gpt_schema.py  test_input_sanitization.py  test_jwt_auth.py  test_mcp_prompts.py  test_mcp_protocol.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_nginx_endpoints.py  test_rate_limiter.py  test_security_headers.py  test_security_suggestions.py  test_session_service.py  test_totp_endpoints.py  test_totp_service.py  test_transaction_manager.py  test_user_endpoints.py  test_user_service.py  test_workflow_engine.py  test_workflow_integration.py  test_workflow_models.py
(+44 files in other folders)
